--- a/user-dash/index.html
+++ b/user-dash/index.html
@@ -7,7 +7,7 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <!--     Fonts and icons     -->
-    <!-- <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700" /> -->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700" />
     <link rel="stylesheet" href="../css/mine.css" />
     <link rel="stylesheet" href="../css/animate.css" />
     <link rel="stylesheet" href="../css/materialdesignicons.min.css" />
@@ -18,35 +18,52 @@
   </head>
 
   <body class="profile-page sidebar-collapse">
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="recipient-name" class="col-form-label">Recipient:</label>
-                <input type="text" autofocus="" class="form-control" id="recipient-name">
+    <!-- Add New Task Modal -->
+    <div class="modal fade bd-example-modal-sm" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog  modal-dialog-centered modal-login" role="document">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-10 mx-auto">
+              <div class="modal-content">
+                <div class="card card-signup card-plain">
+                  <div class="modal-header pb-0">
+                    <div class="card-header card-header-primary text-center">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="material-icons">clear</i></button>
+                      <i class="mdi-18px mdi mdi-alarm d-inline"></i><h4 class="card-title d-inline"> Create Task</h4>
+                    </div>
+                  </div>
+                  <div class="modal-body pt-0">
+                    <form class="form">
+                      <div class="form-group animated bounceInLeft py-1">
+                        <div class="input-group">
+                          <div class="input-group-prepend">
+                            <span class="input-group-text">
+                              <i class="mdi-24px mdi mdi-altimeter"></i>
+                            </span>
+                          </div>
+                          <input type="text" class="form-control" id="name" placeholder="Task Title...">
+                        </div>
+                      </div>
+                      
+                      <div class="text-center mr-auto py-4">
+                        <button class="btn animated bounceInUp btn-primary">
+                          <i class="mdi-18px mdi mdi-alarm"></i> Add to Task
+                        </button>
+                        <button type="button" class="btn btn-danger animated bounceInRight" data-dismiss="modal">
+                          <i class="mdi-18px mdi mdi-window-close"></i> Cancel</button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
               </div>
-              <div class="form-group">
-                <label for="message-text" class="col-form-label">Message:</label>
-                <textarea class="form-control" id="message-text"></textarea>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Send message</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <!-- End of Add New Task Modal -->
+
+    <!-- Navigation Starts Here -->
     <nav class="navbar navbar-transparent bg-dark navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
       <div class="container">
         <div class="navbar-translate">
@@ -100,6 +117,33 @@
         </div>
       </div>
     </nav>
+    <!-- Navigation ends here -->
+
+    <!-- Confirm Delete Task Modal -->
+    <div class="modal fade" id="smallAlertModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mx-auto">
+            <div class="modal-dialog modal-small ">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="material-icons">clear</i></button>
+                </div>
+                <div class="modal-body text-center">
+                  <h5>Are you sure you want to <span class="text-danger">Delete</span> this task? </h5>
+                </div>
+                <div class="modal-footer mx-auto">
+                    <button type="button" class="btn btn-info px-5" data-dismiss="modal">No</button>
+                    <button type="button" class="btn btn-danger px-5">Yes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End of ("Confirm Delete Task") -->
+
     <div class="page-header header-filter" data-parallax="true" style="background-image: url('../img/banners/banner2.jpg');"></div>
     <div class="main main-raised">
       <div class="profile-content">
@@ -121,7 +165,7 @@
           <div class="row">
             <div class="col-md-12 mx-auto">                
               <div class="row py-4">
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-md-6 col-sm-12 animated slideInRight">
                   <div class="card event-card animated">
                     <div class="card-header card-header-primary">
                       <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
@@ -140,7 +184,7 @@
                           <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
                             <i class="material-icons">mode_edit</i>
                           </a>
-                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                          <a href="javascript:void(0)" class="btn btn-danger btn-just-icon btn-fill btn-round" data-toggle="modal" data-target="#smallAlertModal">
                             <i class="material-icons">delete</i>
                           </a>
                         </div>
@@ -149,7 +193,7 @@
                   </div> 
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-md-6 col-sm-12 animated slideInLeft">
                   <div class="card event-card animated">
                     <div class="card-header card-header-warning">
                       <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
@@ -168,7 +212,7 @@
                           <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
                             <i class="material-icons">mode_edit</i>
                           </a>
-                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                          <a href="javascript:void(0)" class="btn btn-danger btn-just-icon btn-fill btn-round" data-toggle="modal" data-target="#smallAlertModal">
                             <i class="material-icons">delete</i>
                           </a>
                         </div>
@@ -177,7 +221,7 @@
                   </div> 
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-md-6 col-sm-12 animated slideInUp">
                   <div class="card event-card animated">
                     <div class="card-header card-header-success">
                       <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
@@ -196,7 +240,7 @@
                           <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
                             <i class="material-icons">mode_edit</i>
                           </a>
-                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                          <a href="javascript:void(0)" class="btn btn-danger btn-just-icon btn-fill btn-round" data-toggle="modal" data-target="#smallAlertModal">
                             <i class="material-icons">delete</i>
                           </a>
                         </div>
@@ -205,7 +249,7 @@
                   </div> 
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-md-6 col-sm-12 animated slideInDown">
                   <div class="card event-card animated">
                     <div class="card-header card-header-warning">
                       <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
@@ -224,7 +268,7 @@
                           <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
                             <i class="material-icons">mode_edit</i>
                           </a>
-                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                          <a href="javascript:void(0)" class="btn btn-danger btn-just-icon btn-fill btn-round" data-toggle="modal" data-target="#smallAlertModal">
                             <i class="material-icons">delete</i>
                           </a>
                         </div>
@@ -233,7 +277,7 @@
                   </div> 
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-md-6 col-sm-12 animated slideInLeft">
                   <div class="card event-card animated">
                     <div class="card-header card-header-info">
                       <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
@@ -252,7 +296,7 @@
                           <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
                             <i class="material-icons">mode_edit</i>
                           </a>
-                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                          <a href="javascript:void(0)" class="btn btn-danger btn-just-icon btn-fill btn-round" data-toggle="modal" data-target="#smallAlertModal">
                             <i class="material-icons">delete</i>
                           </a>
                         </div>
@@ -261,7 +305,7 @@
                   </div> 
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-md-6 col-sm-12 animated slideInLeft">
                   <div class="card event-card animated">
                     <div class="card-header card-header-danger">
                       <i class="mdi mdi-pin mdi-rotate-45 mdi-24px float-right"></i>
@@ -280,7 +324,7 @@
                           <a href="#pablo" class="btn btn-success btn-just-icon btn-fill btn-round btn-wd">
                             <i class="material-icons">mode_edit</i>
                           </a>
-                          <a href="#pablo" class="btn btn-danger btn-just-icon btn-fill btn-round">
+                          <a href="javascript:void(0)" class="btn btn-danger btn-just-icon btn-fill btn-round" data-toggle="modal" data-target="#smallAlertModal">
                             <i class="material-icons">delete</i>
                           </a>
                         </div>
@@ -337,7 +381,7 @@
     <!-- <script src="../js/custom.js" type="text/javascript"></script> -->
     <!-- <script src="../js/plugins/holder.min.js" type="text/javascript"></script> -->
 
-    <!-- <script src="../js/plugins/bootstrap-tagsinput.js"></script> -->
+    <script src="../js/plugins/bootstrap-tagsinput.js"></script>
     <script src="../js/plugins/jasny-bootstrap.min.js"></script>
   </body>
 </html>
